[gd_scene load_steps=2 format=3 uid="uid://cpomwl56g8js4"]

[ext_resource type="Script" path="res://SaveAndLoad/SaveAndLoad.gd" id="1_dd3uh"]

[node name="SaveAndLoad" type="Control"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 3
anchors_preset = 0
offset_right = 300.0
offset_bottom = 300.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="SaveButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
disabled = true
text = "Save
"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "File name"

[node name="EraseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
disabled = true
text = "Erase
"

[node name="ItemList" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
item_count = 2
item_0/text = "Save 1"
item_1/text = "Save 2"
script = ExtResource("1_dd3uh")

[connection signal="pressed" from="VBoxContainer/HBoxContainer/SaveButton" to="VBoxContainer/ItemList" method="_on_save_button_pressed"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/LineEdit" to="VBoxContainer/ItemList" method="_on_line_edit_text_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/EraseButton" to="VBoxContainer/ItemList" method="_on_erase_button_pressed"]
[connection signal="item_activated" from="VBoxContainer/ItemList" to="VBoxContainer/ItemList" method="_on_item_activated"]
[connection signal="item_selected" from="VBoxContainer/ItemList" to="VBoxContainer/ItemList" method="_on_item_selected"]
